<resources>
    <string name="app_name">ProjectsMap</string>
    <string name="title_activity_search_developer">SearchDeveloper</string>
    <string name="szukaj">Szukaj</string>
    <string name="wszyscy_pracownicy">Wszyscy pracownicy</string>
    <string name="wyszukaj_pracownika">Wyszukaj Pracownika</string>
    <string name="numer_id_pracownika">Numer ID pracownika</string>
    <string name="pobierz_dane">Pobierz dane</string>
    <string name="cofnij">Cofnij</string>
    <string name="numer_id">numer_id</string>
    <string name="informacje_o_pracowniku">Informacje o pracowniku</string>
    <string name="nazwa_technologi">nazwa technologi</string>
    <string name="szukanie_po">Szukanie po:</string>
    <string name="button">Button</string>
    <string name="row_data">Row data</string>
    <string name="todo">TODO</string>
    <string-array name="selected_method_developer">
        <item>Imię lub nazwisko</item>
        <item>Technologia</item>\
        <item>Id</item>
        <item>Wszyscy</item>
    </string-array>
    <string-array name="selected_method_project">
        <item>Nazwa</item>
        <item>Id</item>
        <item>Wszystkie</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
