<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.projectsmap.SerachDeveloper">

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/szukaj"
        android:layout_toStartOf="@id/buttonSearch"
        android:layout_toLeftOf="@id/buttonSearch"
        android:layout_toRightOf="@id/editText"
        android:layout_toEndOf="@id/editText"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/cofnij"/>

    <EditText
        android:id="@+id/editText"
        android:hint="@string/numer_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:width="170dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewInformationDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="17dp"
        android:hint="@string/informacje_o_pracowniku"
        android:textSize="24sp" />
</RelativeLayout>
